should fix overlapping

--- a/frontend/src/style.scss
+++ b/frontend/src/style.scss
@@ -47,9 +47,10 @@ body {
 	background: none;
 	outline: none;
 	color: white;
-	width: 30px;
-	height: 30px;
+	width: 35px;
+	height: 35px;
 	font-size: 25px;
+	line-height: 35px;
 	cursor: pointer;
 }
 
